# topic-summerization-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_dev.yml  env_example.txt  pyproject.toml
.github/workflows/: docker-image.yml
app/: main.py
app/api/endpoints/: spell_check.py  summary.py  urdu_nouns.py
app/core/agents/spell_check_agent/: chains.py  spell_check_core.py  spell_check_util.py
app/core/agents/summary_agent/: agent_workflow.py  summarization_core.py  summary_utils.py
app/core/agents/urdu_nouns_agent/: chain.py  nouns_util.py  word_cloud_core.py
app/core/graph_builder/: graph.py
app/core/prompts/: llama_base_prompt.py  nouns_prompt.py  spell_check_prompt.py  summary_prompt.py
app/utils/: connections.py  models.py  settings.py
